fix weird spacing issue at bottom of page

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -26,7 +26,6 @@ aside,
 details,
 figcaption,
 figure,
-footer,
 header,
 hgroup,
 main,
@@ -5575,7 +5574,7 @@ html, body {
 #page_container {
   min-height: 100%;
   background: #000000;
-  padding-bottom: 20px;
+  padding-bottom: 60px;
 }
 
 /* line 33, ../dev/sass/_vpr.scss */
@@ -5624,15 +5623,6 @@ html, body {
   font-size: 30px;
   padding-left: 1px;
 }
-
-/* line 72, ../dev/sass/_vpr.scss */
-footer {
-  background: #000000;
-  font-size: 12px;
-  color: #e6e6e6;
-  margin-top: -55px;
-}
-
 
 /* line 89, ../dev/sass/_vpr.scss */
 
@@ -9398,7 +9388,7 @@ h1, h2, h3, h4 {
 }
 
 .chapter_style {
-  padding-top: 70px;
+  padding-top: 50px;
 }
 
 .chapter_style h4 {
